# synth-local

./: .gitignore  CHANGELOG.md  LICENSE  README.md  prompts.txt  prompts_en.txt  pyproject.toml  test_freeform_en.py  test_quality.py  test_sdlg.py  test_seed.py
.github/workflows/: test.yml
examples/: prompts_en.txt  prompts_ja.txt
recipes/: gpt2_en_sample.json  mini_local.json  qwen_ja_det.json
src/sdlg/: cli.py  cli.py.bak  generator.py  quality.py
src/sdlg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli_recipe.py
