[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "sdlg"
version = "0.1.1"
description = "Synthetic Data Local Generator (local/colab-ready)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "transformers",
  "accelerate",
  "sentencepiece",
  "langdetect",
  "pandas",
  "tqdm",
]
authors = [{name="Your Name"}]
license = {text = "Commercial"}

[project.scripts]
sdlg = "sdlg.cli:main"

